# PoetryTemplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: Resources.md
reports/flake8/: index.html
tests/: test_poetrytemplate.py
